--- a/css/position-3/style.css
+++ b/css/position-3/style.css
@@ -60,6 +60,8 @@ button:active {
  top:50%;
  left: 50%;
  transform: translate(-50%,-50%);
+ background: #FFFFFF;
+ border-radius: 4px;
 }
 .modal-title{
   margin: 0px auto 4px;
