--- a/css/Test2/style.css
+++ b/css/Test2/style.css
@@ -3,34 +3,22 @@
  margin: 0;   
 }
 .box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;  
-    background-color: #ff4949; 
-    font-size: 30px;
-    font-weight: 700;
-    color:#fff;
+    border: 2px solid black;
+    background-color: #0066ff;
+    width: 300px;
+    height: 200px;
 }
-.box::after{
-    content:'Mobile';
-}
-@media screen and (min-width:576px){
-    /* 가로길이 576px 이상일때만 조건 허용 */
-    /* css처리 */
-    .box{
-        background-color: #ff5216;
-    }
-    .box::after{
-        content: 'Landscap Phone';
-    }
-}
-@media screen and (min-width:768px) {
-    .box{
-        background-color: #ffc82c;
-    }
-    .box::after{
-        content: 'Tablet';
-    }
-}
+ .box-2{
+    position: relative;
+    background-color: lightcoral;
+    width: 250px;
+    height: 200px;
+} 
+.box-3{
+    position:absolute;
+    background-color: black;
+    width: 250px;
+    height: 200px;
+    top:20px;
+} 
+
