--- a/Project/style.css
+++ b/Project/style.css
@@ -53,6 +53,8 @@ input{
     font-weight: 700;
     border-radius: 2px;
     transition: opacity 300ms ease-in-out;
+    border: none;
+
 }
 .fill-button:hover{
     opacity: 0.5;
@@ -202,6 +204,57 @@ input{
 
 
 
+/* Subscription CSS */
+.subscription{
+    padding: 40px 0;
+    text-align: center;
+    background-color: #F2F8FA;;
+}
+.subscription-image{
+    padding: 25px 0;
+}
+.subscription-image img{
+    display: block;
+    margin: 0 auto;
+    width: auto;    
+    height: 190px;
+}
+.subscription-title{
+    font-size: 32px;
+    line-height: 1;
+    color: #2B292D;
+    letter-spacing: -0.05em;
+    margin-bottom: 16px;
+
+}
+.subscription-desc{
+    margin-bottom: 24px;
+}
+.subscription-form input{
+    width: 100%;
+    height: 48px;
+    padding: 0 16px;
+    border: none;
+    border-radius: 2px;
+    margin-bottom: 8px;
+}
+.subscription-form .fill-button{
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 8px;
+}
+
+.subscription-form .form-notice{
+    font-size: 13px;
+    line-height: 1.53846153846;
+    letter-spacing: 0;
+    color: #7B7B7E;
+}
+.subscription-form .form-notice a {
+    color: #3040C4;
+    text-decoration: underline;
+}
+
 
 /* >768 (Desktop) */
 @media screen and (min-width:768px) {
@@ -302,13 +355,49 @@ input{
     .curriculum .row:last-child .col-md-6:first-child{
         margin-bottom: 0;
     }
-    
-    /* Subscription CSS */
-    .subscription.section{
-        padding-bottom: 80px;
+     /* Subscription CSS */
+     .subscription{
+         padding: 80px 0;
+         text-align: left;
+     }
+     .subscription-image{
+        padding: 8px 0;
+    }
+    .subscription-image img{
+        margin-left: 0;
+        height: 285px; 
+    }
+    .subscription-title{
+        font-size: 40px;
+    }
+    .subscription .input-group {
+        display: flex;
+        align-items: center;
+        margin-bottom: 4px;
+    }
+    .subscription-form input{ 
+        height: 56px;
+        margin-right: 8px;
+        font-size: 18px;
+        line-height: 1.33333333333;
+        margin-bottom: 0;
     }
 
- 
+    .subscription-form .fill-button{
+        flex-shrink: 0;
+        width: 160px;
+        font-size: 18px;
+        line-height: 1.33333333333;
+        letter-spacing: -0.02em;    
+        margin-bottom: 0;
+    }
+    .subscription-form .form-notice{
+        font-size: 14px;
+        line-height:1.71428571429;
+       
+    }
+    
+
 }
 /* Custom grid System - Fix container width */
 @media screen and (min-width:1200px){
