--- a/Project/style.css
+++ b/Project/style.css
@@ -254,7 +254,19 @@ input{
     color: #3040C4;
     text-decoration: underline;
 }
-
+/* Footer CSS */
+.footer{
+    padding: 24px 0;
+}
+.footer-link:not(:last-child){
+    margin-bottom: 8px;
+}
+.footer-link a{
+    font-size: 14px;
+    line-height: 1.71428571429;
+    color: #807F81;
+    letter-spacing: -0.01em;
+}
 
 /* >768 (Desktop) */
 @media screen and (min-width:768px) {
@@ -394,10 +406,20 @@ input{
     .subscription-form .form-notice{
         font-size: 14px;
         line-height:1.71428571429;
-       
     }
-    
-
+    /* Footer CSS */
+    .footer{
+        padding: 16px 0;
+    }
+    .footer-links{
+        display: flex;
+        align-items: center;
+    }
+    .footer-link:not(:last-child){
+        margin-right: 16px;
+        margin-bottom: 0;
+    }
+  
 }
 /* Custom grid System - Fix container width */
 @media screen and (min-width:1200px){
